--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "corex-api"
-version = "0.1.0"
+version = "0.1.0+1"
 edition = "2021"
 description = "A lightweight,modular API framework for building extensible systems in Rust."
 license = "MIT"
